# 2k2v

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  justfile
.github/workflows/: lint-pr.yml  main.yml
cli/: Cargo.toml
cli/src/: main.rs
kvnode/: Cargo.toml
kvnode/src/: actor.rs  dummy.rs  kvnode.rs  lib.rs  main.rs  node.rs  persistence.rs  shutdown.rs  storage.rs
system_test/: pyproject.toml
system_test/features/: environment.py  http.feature  persistence.feature
system_test/features/steps/: common.py  http_steps.py
system_test/reports/: TESTS-http.xml
