[package]
name = "kvnode"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["tokio"] }
axum-test = "20.0.0"
clap = { version = "4.6.1", features = ["derive"] }
postcard = "1.1.3"
rkyv = "0.8.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sha256 = "1.6.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
tempdir = "0.3.7"
